fix: prevent shifts filter date/time values from truncating
Use min-width: max-content on date select containers and time input
groups so values display fully instead of being cut off.

Partial fix for #1637 - layout still needs adjustment

--- a/resources/assets/themes/base.scss
+++ b/resources/assets/themes/base.scss
@@ -505,3 +505,18 @@ input[type='number']::-webkit-inner-spin-button {
 input[type='number'] {
   -moz-appearance: textfield;
 }
+
+/* Prevent shifts filter date/time values from being truncated */
+.choices:has(#start_day),
+.choices:has(#end_day) {
+  min-width: max-content;
+}
+
+.input-group.time {
+  min-width: max-content;
+  flex-wrap: nowrap;
+
+  input[type='time'] {
+    min-width: max-content;
+  }
+}
